--- a/Practice/Add_an_images_in_a_html_code.html
+++ b/Practice/Add_an_images_in_a_html_code.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>
-      <p style="font family:'Courier New';color:blue">Try html</p>
+      <p style="font family:'Courier New';color:blue">Try <em>html</em></p>
     </h1>
     <img src ="C:\\Users\\Admin\\Pictures\\Flugzeug_und_Flughafen\\15_6_2023\\20230616_110535.jpg" alt="Landing at Frankfurt Main">
   </body>  
