--- a/Practice/Lesson_1.html
+++ b/Practice/Lesson_1.html
@@ -6,7 +6,7 @@
         </title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1><b>Hello World!</b></h1>
     </body>
 </html>
         
