--- a/Practice/Day _2.html
+++ b/Practice/Day _2.html
@@ -17,7 +17,7 @@
 
   <body>
 	  <!-- give these elements some style -->
-	  <h1>Why is HTML so successful!?</h1>
+	  <h1>Why is HTML so successful?</h1>
 	  <p>Html is <em>easy</em></p>
 	  <p>Html is <strong>fun</strong></p>
 	  
