--- a/Practice/Set_color_with_RGB_html.html
+++ b/Practice/Set_color_with_RGB_html.html
@@ -27,7 +27,7 @@
 	  
 	  <h1>Why is HTML so successful?</h1>
 	  <p>Html is <em>easy</em></p>
-	  <p>Html is <strong>fun</strong></p>
+	  <p>Html is <strong>really nice</strong></p>
 	  
   </body>
 
