--- a/Practice/Cafe_menu_web.html
+++ b/Practice/Cafe_menu_web.html
@@ -1,4 +1,4 @@
-<!DOCTPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -13,8 +13,8 @@
         <p class="established">Est. 2020</p>
         <hr>
         <section>
-        <h2>Coffee</h2>
-          <img scr="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon">
+          <h2>Coffee</h2>
+          <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon"/>
           <article class="item">
             <p class="flavor">French Vanilla</p><p class="price">3.00</p>
           </article>
@@ -33,6 +33,7 @@
         </section>
         <section>
           <h2>Desserts</h2>
+          <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg" alt="pie icon"/>
           <article class="item">
             <p class="dessert">Donut</p><p class="price">1.50</p>
           </article>
