--- a/Practice/CSS_markers.html
+++ b/Practice/CSS_markers.html
@@ -9,7 +9,7 @@
   <body>
     <h1>CSS Color Markers</h1>
     <div class="container">
-      <div class="marker one">
+      <div class="marker on">
       </div>
       <div class="marker two">
       </div>
