--- a/Practice/CSS_markers.html
+++ b/Practice/CSS_markers.html
@@ -9,25 +9,21 @@
   <body>
     <h1>CSS Color Markers</h1>
     <div class="container">
-      <div class="marker on">
+      <div class="marker red">
       </div>
-      <div class="marker two">
+      <div class="marker green">
       </div>
-      <div class="marker three">
+      <div class="marker blue">
       </div>
     </div>
   </body>
 </html>
-
-
-
-
 h1 {
   text-align: center;
 }
 
 .container {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   padding: 10px 0;
 }
 
@@ -35,14 +31,14 @@ h1 {
   width: 200px;
   height: 25px;
   margin: 10px auto;
+}.red {
+  background: linear-gradient(90deg);
 }
 
-.one {
-  background-color: rgb(255, 0, 0);
+.green {
+  background-color: #007F00;
 }
-.two {
-  background-color: rgb(0, 127, 0);
-}
-.three {
-  background-color: rgb(0, 0, 255);
+
+.blue {
+  background-color: hsl(240, 100%, 50%);
 }
