--- a/Practice/CSS_markers.html
+++ b/Practice/CSS_markers.html
@@ -10,6 +10,8 @@
     <h1>CSS Color Markers</h1>
     <div class="container">
       <div class="marker red">
+        <div class="cap"></div>
+        <div class="sleeve"></div>
       </div>
       <div class="marker green">
       </div>
@@ -31,14 +33,32 @@ h1 {
   width: 200px;
   height: 25px;
   margin: 10px auto;
-}.red {
-  background: linear-gradient(90deg);
+}
+
+.cap {
+  width: 60px;
+  height: 25px;
+}
+.sleeve {
+  width: 110px;
+  height: 25px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-left-width: 10px;
+  border-left-style: solid;
+}
+
+.cap, .sleeve {
+  display: inline-block;
+}
+
+.red {
+  background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
 }
 
 .green {
-  background-color: #007F00;
+  background: linear-gradient(#55680D, #71F53E, #116C31);
 }
 
 .blue {
-  background-color: hsl(240, 100%, 50%);
+  background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
 }
