--- a/Practice/CSS_markers.html
+++ b/Practice/CSS_markers.html
@@ -9,7 +9,7 @@
   <body>
     <h1>CSS Color Markers</h1>
     <div class="container">
-      <div class="marker blue">
+      <div class="marker red">
         <div class="cap"></div>
         <div class="sleeve"></div>
       </div>
