--- a/Practice/CSS_markers.html
+++ b/Practice/CSS_markers.html
@@ -13,7 +13,7 @@
         <div class="cap"></div>
         <div class="sleeve"></div>
       </div>
-      <div class="marker gree">
+      <div class="marker green">
         <div class="cap"></div>
         <div class="sleeve"></div>
       </div>
