--- a/Practice/Registration_Form.html
+++ b/Practice/Registration_Form.html
@@ -21,7 +21,28 @@
         <label for="business-account"><input id="business-account" type="radio" name="account-type" /> Business</label>
       </fieldset>
       <fieldset>
-      body {
+        <label>Upload a profile picture: <input type="file" /></label>
+        <label>Input your age (years): <input type="number" min="13" max="120" /></label>
+        <label>How did you hear about us?
+          <select>
+            <option value="">(select one)</option>
+            <option value="1">freeCodeCamp News</option>
+            <option value="2">freeCodeCamp YouTube Channel</option>
+            <option value="3">freeCodeCamp Forum</option>
+            <option value="4">Other</option>
+          </select>
+        </label>
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   body {
   width: 100%;
   height: 100vh;
   margin: 0;
@@ -33,14 +54,10 @@ label {
   display: block;
   margin: 0.5rem 0;
 }
-   
-   
-   
-   
       </fieldset>
-        <label for="terms-and-conditions">
-          <input id="terms-and-conditions" type="checkbox" required /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
-        </label>
+      <label for="terms-and-conditions">
+        <input id="terms-and-conditions" type="checkbox" required /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
+      </label>
       <input type="submit" value="Submit" />
     </form>
   </body>
