--- a/Practice/Registration_Form.html
+++ b/Practice/Registration_Form.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Registration Form</h1>
+    <h1>Registration For</h1>
     <p>Please fill out this form with the required information</p>
     <form method="post" action='https://register-demo.freecodecamp.org'>
       <fieldset>
