--- a/Practice/Registration_Form.html
+++ b/Practice/Registration_Form.html
@@ -37,7 +37,7 @@
         </label>
       </fieldset>
       <label for="terms-and-conditions">
-        <input id="terms-and-conditions" type="checkbox" required name="terms-and-conditions" /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
+        <input class="inline" id="terms-and-conditions" type="checkbox" required name="terms-and-conditions" /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
       </label>
       <input type="submit" value="Submit" />
     </form>
@@ -63,6 +63,7 @@ form {
   max-width: 500px;
   min-width: 300px;
   margin: 0 auto;
+  padding-bottom: 2em;
 }
 
 fieldset {
@@ -103,10 +104,14 @@ input, textarea {
 input[type="submit"] {
   display: block;
   width: 60%;
-  margin: 0 auto;
+  margin: 1em auto;
   height: 2em;
   font-size: 1.1rem;
   background-color: #3b3b4f;
   border-color: white;
+  min-width: 300px;
+}
 
+input[type="file"] {
+  padding: 1px 2px;
 }
